@@ -1,3 +1,9 @@
+2000-06-29  Jeffrey Stedfast  <fejj@helixcode.com>
+
+	* e-msg-composer.c: Changed "Exit" to "Close" in the File menu.
+	This is a little more intuitive as it does not suggest exiting
+	the application, just says "close this window"
+
 2000-06-26  Christopher James Lahey  <clahey@helixcode.com>
 
 	* Makefile.am: Added e-msg-composer-select-file.h for make
